--- a/litrreview/requirements.txt
+++ b/litrreview/requirements.txt
@@ -5,6 +5,7 @@ django-crispy-forms==1.12.0
 django-model-utils==4.1.1
 django-shortcuts==1.6
 flake8==3.9.2
+isort==5.9.1
 mccabe==0.6.1
 Pillow==8.2.0
 pycodestyle==2.7.0
